# gpu-mst

./: .gitignore  CMakeLists.txt  README.md  kernel.cl  main.cpp
include/: graph.h  opencl.h  parallel.h
source/: graph.cpp  opencl.cpp  parallel.cpp
